fix: cleand code