@@ -5,6 +5,7 @@ import lombok.RequiredArgsConstructor;
 import org.aspectj.lang.annotation.Aspect;
 import org.aspectj.lang.annotation.Before;
 
+import org.springframework.http.HttpMethod;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Component;
 
@@ -23,19 +24,19 @@ public class ReviewSecurityAspect {
 
     @Before("execution(* pet.db.jdbc.controller.ReviewController.create(..)) && args(reviewPayload)")
     public void secureReviewCreation(ReviewPayload reviewPayload) {
-        secureEditMethod(reviewPayload.authorId(), "update");
+        secureEditMethod(reviewPayload.authorId(), HttpMethod.POST);
     }
 
     @Before("execution(* pet.db.jdbc.controller.ReviewController.deleteById(..)) && args(id)")
     public void secureReviewDeletion(Integer id) {
         reviewService.findById(id)
-                .ifPresent(review -> secureEditMethod(review.getAuthorId(), "delete"));
+                .ifPresent(review -> secureEditMethod(review.getAuthorId(), HttpMethod.DELETE));
     }
 
-    private void secureEditMethod(Integer userId, String editMethodName) {
+    private void secureEditMethod(Integer userId, HttpMethod method) {
         if (!userPermissionService.checkUserForEditPermissionById(userId)) {
             throw new AccessDeniedException(
-                    String.format("Attempt to %s user without proper permission", editMethodName));
+                    "Attempt to %s user without proper permission".formatted(method));
         }
     }
 
