@@ -5,6 +5,7 @@ import lombok.RequiredArgsConstructor;
 import org.aspectj.lang.annotation.Before;
 import org.aspectj.lang.annotation.Aspect;
 
+import org.springframework.http.HttpMethod;
 import org.springframework.security.access.AccessDeniedException;
 import org.springframework.stereotype.Component;
 
@@ -20,18 +21,18 @@ public class UserSecurityAspect {
 
     @Before("execution(* pet.db.jdbc.controller.UserController.updateById(..)) && args(userPayload, id)")
     public void secureUserUpdate(UserPayload userPayload, Integer id) {
-        secureEditMethod(id, "update");
+        secureEditMethod(id, HttpMethod.PATCH);
     }
 
     @Before("execution(* pet.db.jdbc.controller.UserController.deleteById(..)) && args(id)")
     public void secureUserDeletion(Integer id) {
-        secureEditMethod(id, "delete");
+        secureEditMethod(id, HttpMethod.DELETE);
     }
 
-    private void secureEditMethod(Integer userId, String editMethodName) {
+    private void secureEditMethod(Integer userId, HttpMethod method) {
         if (!userPermissionService.checkUserForEditPermissionById(userId)) {
             throw new AccessDeniedException(
-                    String.format("Attempt to %s user without proper permission", editMethodName));
+                    "Attempt to %s user without proper permission".formatted(method));
         }
     }
 
